cmake_minimum_required(VERSION 3.4.0)
set(PROJECT_NAME LeetCodePractice)
project(${PROJECT_NAME})

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)

# add_subdirectory(src/LeetCode/Sum)
# add_subdirectory(src/LeetCode/ReverseNodesInKGroup)
# add_subdirectory(src/LeetCode/Roman2Integer)
# add_subdirectory(src/LeetCode/LongestConsecutiveSequence)
# add_subdirectory(src/LeetCode/ContainerWithMostWater)
# add_subdirectory(src/LeetCode/MedianOfTwoSortedArray)
# add_subdirectory(src/LeetCode/0002AddTwoNumbers)
# add_subdirectory(src/LeetCode/0019RemoveNthFromeEndOfList)
# add_subdirectory(src/LeetCode/0622DesignCircularQueue)
# add_subdirectory(src/LeetCode/0232ImplementQueueUsingStacks)
# add_subdirectory(src/LeetCode/0114FlattenBinaryTreeToLinkedList)
# add_subdirectory(src/LeetCode/0094BinaryTreeInorderTraversal)
# add_subdirectory(src/LeetCode/0003LongetSubstringWithoutRepeatingCharacters)
# add_subdirectory(src/LeetCode/0012IntegerToRoman)
# add_subdirectory(src/LeetCode/0017LetterCombinationsOfAPhoneNumber)
# add_subdirectory(src/LeetCode/0029DivideTwoIntegers)
# add_subdirectory(src/LeetCode/0078Subset)
# add_subdirectory(src/LeetCode/0089GrayCode)
# add_subdirectory(src/LeetCode/0380InsertDeleteGetRandomO_1)
# add_subdirectory(src/LeetCode/0024SwapNodesInPairs)
# add_subdirectory(src/LeetCode/0050Pow_x_n)
# add_subdirectory(src/LeetCode/0088MergeSortedArray)
# add_subdirectory(src/LeetCode/0015ThreeSum)
# add_subdirectory(src/LeetCode/0056MergeIntervals)
# add_subdirectory(src/LeetCode/0284PeekingIterator)
# add_subdirectory(src/LeetCode/0061RotateList)
# add_subdirectory(src/LeetCode/0023Merge_k_SortedLists)
# add_subdirectory(src/LeetCode/0234PalindromeLinkedList)
# add_subdirectory(src/LeetCode/1526MinimumNumberOfIncrementsOnSubarraysToFormATargetArray)
# add_subdirectory(src/LeetCode/0133CloneGraph)
# add_subdirectory(src/LeetCode/2115FindAllPossibleRecipesFromGivenSupplies)
# add_subdirectory(src/LeetCode/0202HappyNumber)
# add_subdirectory(src/LeetCode/0690EmployeeImportance)
# add_subdirectory(src/LeetCode/0297SerializeAndDeserializeBinaryTree)
# add_subdirectory(src/LeetCode/0137SingleNumberII)
# add_subdirectory(src/LeetCode/0187RepeatedDNASequences)
# add_subdirectory(src/LeetCode/0343IntegerBreak)
# add_subdirectory(src/LeetCode/0150EvaluateReversePolishNotation)
add_subdirectory(src/LeetCode/0843GuessTheWord)
add_subdirectory(src/LeetCode/2202MaximizeTheTopmostElementAfterKMoves)
add_subdirectory(src/CommonModules.Testing)