cmake_minimum_required(VERSION 3.4.0)

# set (CMAKE_C_COMPILER  "/opt/homebrew/bin/aarch64-apple-darwin22-gcc-13")
# set (CMAKE_CXX_COMPILER "/opt/homebrew/bin/aarch64-apple-darwin22-g++-13")
set (CMAKE_C_COMPILER  "/usr/bin/gcc")
set (CMAKE_CXX_COMPILER "/usr/bin/g++")

set(PROJECT_NAME LeetCodePractice)
project(${PROJECT_NAME})

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)

set(CMAKE_VERBOSE_MAKEFILE OFF) # opened if want to debug dependency
set(CMAKE_RULE_MESSAGES ON)

# add_subdirectory(src/LeetCode/0001Sum)
# add_subdirectory(src/LeetCode/0013Roman2Integer)
# add_subdirectory(src/LeetCode/0128LongestConsecutiveSequence)
# add_subdirectory(src/LeetCode/0011ContainerWithMostWater)
# add_subdirectory(src/LeetCode/0004MedianOfTwoSortedArray)
# add_subdirectory(src/LeetCode/0002AddTwoNumbers)
# add_subdirectory(src/LeetCode/0019RemoveNthFromeEndOfList)
# add_subdirectory(src/LeetCode/0622DesignCircularQueue)
# add_subdirectory(src/LeetCode/0232ImplementQueueUsingStacks)
# add_subdirectory(src/LeetCode/0114FlattenBinaryTreeToLinkedList)
# add_subdirectory(src/LeetCode/0094BinaryTreeInorderTraversal)
# add_subdirectory(src/LeetCode/0003LongetSubstringWithoutRepeatingCharacters)
# add_subdirectory(src/LeetCode/0012IntegerToRoman)
# add_subdirectory(src/LeetCode/0017LetterCombinationsOfAPhoneNumber)
# add_subdirectory(src/LeetCode/0029DivideTwoIntegers)
# add_subdirectory(src/LeetCode/0078Subset)
# add_subdirectory(src/LeetCode/0089GrayCode)
# add_subdirectory(src/LeetCode/0380InsertDeleteGetRandomO_1)
# add_subdirectory(src/LeetCode/0009PalindromeNumber)
# add_subdirectory(src/LeetCode/0024SwapNodesInPairs)
# add_subdirectory(src/LeetCode/0050Pow_x_n)
# add_subdirectory(src/LeetCode/0088MergeSortedArray)
# add_subdirectory(src/LeetCode/0015ThreeSum)
# add_subdirectory(src/LeetCode/0056MergeIntervals)
# add_subdirectory(src/LeetCode/0284PeekingIterator)
# add_subdirectory(src/LeetCode/0061RotateList)
# add_subdirectory(src/LeetCode/0023Merge_k_SortedLists)
# add_subdirectory(src/LeetCode/0234PalindromeLinkedList)
# add_subdirectory(src/LeetCode/1526MinimumNumberOfIncrementsOnSubarraysToFormATargetArray)
# add_subdirectory(src/LeetCode/0133CloneGraph)
# add_subdirectory(src/LeetCode/2115FindAllPossibleRecipesFromGivenSupplies)
# add_subdirectory(src/LeetCode/0202HappyNumber)
# add_subdirectory(src/LeetCode/0690EmployeeImportance)
# add_subdirectory(src/LeetCode/0297SerializeAndDeserializeBinaryTree)
# add_subdirectory(src/LeetCode/0137SingleNumberII)
# add_subdirectory(src/LeetCode/0187RepeatedDNASequences)
# add_subdirectory(src/LeetCode/0343IntegerBreak)
# add_subdirectory(src/LeetCode/0150EvaluateReversePolishNotation)
# add_subdirectory(src/LeetCode/0843GuessTheWord)
# add_subdirectory(src/LeetCode/2202MaximizeTheTopmostElementAfterKMoves)
# add_subdirectory(src/LeetCode/0062UniquePaths)
# add_subdirectory(src/LeetCode/0207CourseSchedule)
# add_subdirectory(src/LeetCode/0833FindAndReplaceInString)
# add_subdirectory(src/LeetCode/0384ShuffleAnArray)
# add_subdirectory(src/LeetCode/0355DesignTwitter)
# add_subdirectory(src/LeetCode/2092FindAllPeopleWithSecret)
# add_subdirectory(src/LeetCode/0387FirstUniqueCharacterInAString)
# add_subdirectory(src/LeetCode/1776CarFleetII)
# add_subdirectory(src/LeetCode/0460LfuCache)
# add_subdirectory(src/LeetCode/0393UTF8Validation)
# add_subdirectory(src/LeetCode/0394DecodeString)
# add_subdirectory(src/LeetCode/0963MinimumAreaRectangleII)
# add_subdirectory(src/LeetCode/1218LongestArithmeticSubsequenceOfGivenDifference)
# add_subdirectory(src/LeetCode/0792NumberOfMatchingSubsequences)
# add_subdirectory(src/LeetCode/0083RemoveDuplicatesFromSortedList)
# add_subdirectory(src/LeetCode/0020ValidParentheses)
# add_subdirectory(src/LeetCode/0032LongestValidParentheses)
# add_subdirectory(src/LeetCode/0199BinaryTreeRightSideView)
# add_subdirectory(src/LeetCode/0447NumberOfBoomerangs)
# add_subdirectory(src/LeetCode/1509MinimumDifferenceBetweenLargestAndSmallestValueInThreeMoves)
# add_subdirectory(src/LeetCode/0877StoneGame)
# add_subdirectory(src/LeetCode/0095UniqueBinarySearchTreesII)
# add_subdirectory(src/LeetCode/0287FindTheDuplicateNumber)
# add_subdirectory(src/LeetCode/0224BasicCalculator)
# add_subdirectory(src/LeetCode/0063UniquePathsII)
# add_subdirectory(src/LeetCode/0070ClimbingStairs)
# add_subdirectory(src/LeetCode/0164MaximumGap)
# add_subdirectory(src/LeetCode/0215KthLargestElementInAnArray)
# add_subdirectory(src/LeetCode/0025ReverseNodesInKGroup)
# add_subdirectory(src/LeetCode/0312BurstBalloons)
# add_subdirectory(src/LeetCode/0388LongestAbsoluteFilePath)
# add_subdirectory(src/LeetCode/0797AllPathsFromSourceToTarget)
# add_subdirectory(src/LeetCode/0720LongestWordInDictionary)
# add_subdirectory(src/LeetCode/0461HammingDistance)
# add_subdirectory(src/LeetCode/0477TotalHammingDistance)
# add_subdirectory(src/LeetCode/0118Pascal_s_Triangle)
# add_subdirectory(src/LeetCode/0119Pascal_s_TriangleII)
# add_subdirectory(src/LeetCode/0233NumberOfDigitOne)
# add_subdirectory(src/LeetCode/0632SmallestRangeCoveringElementsFromKLists )
# add_subdirectory(src/LeetCode/0274HIndex)
# add_subdirectory(src/LeetCode/0275HIndexII)
# add_subdirectory(src/LeetCode/0091DecodeWays)
# add_subdirectory(src/LeetCode/0138CopyListWithRandomPointer)
# add_subdirectory(src/LeetCode/0007ReverseInteger)
# add_subdirectory(src/LeetCode/0099RecoverBinarySearchTree)
# add_subdirectory(src/LeetCode/0547NumberOfProvinces)
# add_subdirectory(src/LeetCode/0200NumberOfIslands)
# add_subdirectory(src/LeetCode/0064MinimumPathSum)
# add_subdirectory(src/LeetCode/0059SpiralMatrixII)
# add_subdirectory(src/LeetCode/0039CombinationSum)
# add_subdirectory(src/LeetCode/0109ConvertSortedListToBinarySearchTree)
# add_subdirectory(src/LeetCode/0152MaximumProductSubarray)
# add_subdirectory(src/LeetCode/0022GenerateParentheses)
# add_subdirectory(src/LeetCode/0785IsGraphBipartite)
# add_subdirectory(src/LeetCode/0045JumpGameII)
# add_subdirectory(src/LeetCode/0031NextPermutation)
# add_subdirectory(src/LeetCode/0035SearchInsertPosition)
add_subdirectory(src/LeetCode/0139WordBreak)
add_subdirectory(src/LeetCode/0378KthSmallestElementInASortedMatrix)
add_subdirectory(src/CommonModules.Testing)
ADd_subdirectory(src/LeetcodeTestFramework.UnitTest)